Standardize returned lists being immutable and document such