@@ -18,7 +18,10 @@ final class RecordingSubscriber implements FeatureSubscriber {
         recordingTarget.add(feature);
     }
 
+    /**
+     * @return an unmodifiable snapshot
+     */
     public List<Feature> getRecording() {
-        return Collections.unmodifiableList(recordingTarget);
+        return List.copyOf(recordingTarget);
     }
 }
